# one-shot-boot

./: Cargo.toml  LICENSE  README.md  build.rs  manifest.xml
src/: main.rs  menu.rs  storage.rs  system.rs  utils.rs
