[package]
name = "one-shot-boot"
version = "0.1.0"
edition = "2024"
descripton = "A TUI utility to set the next boot entry."
license = "MIT"
repository = "https://github.com/Juhan280/one-shot-boot"

[dependencies]
cursive = "0.21.1"
strum = { version = "0.27.2", features = ["derive"] }

[dependencies.windows]
version = "0.62.2"
features = [
	"Win32_Security",
	"Win32_System_Console",
	"Win32_System_Shutdown",
	"Win32_System_Threading",
	"Win32_System_WindowsProgramming"
]


[build-dependencies]
winresource = "0.1.29"
